--- a/Lab Exercise1 -- LastHope.csproj
+++ b/Lab Exercise1 -- LastHope.csproj
@@ -7,4 +7,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Include=".github\copilot-instructions.md" />
+  </ItemGroup>
+
 </Project>
