--- a/Lab Exercises.csproj
+++ b/Lab Exercises.csproj
@@ -11,4 +11,8 @@
     <None Include=".github\copilot-instructions.md" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Lab Exercise3\" />
+  </ItemGroup>
+
 </Project>
